Object Picker Doesn't Work on Second window #90817

Closed
opened 2021-08-21 08:01:19 +02:00 by Ryan Rickett · 9 comments

System Information
Operating system: Windows 11 21H1
Graphics card: RTX 2080 Ti

Blender Version
Broken: 2.93.3
Worked: Never (going back to 2.8.1 at least)

Short description of error
If you are using two monitors, and you have a Properties window on one monitor and you try to use any Object Picker, the picker will not allow you to select any object that is on the other monitor. This makes a dual screen experience very frustrating, if you have the viewport on one screen and all the properties panels on the other.

Exact steps for others to reproduce the error

  1. Create an object
  2. Add a "Child Of" Constraint (could be any constraint or modifier that allows you to select an object using a picker)
  3. Open a new window Window > New Window, change that to a Properties Editor
  4. In the Constraint's Object field click on the picker to activate it, try to pick in the other window, it wont work
**System Information** Operating system: Windows 11 21H1 Graphics card: RTX 2080 Ti **Blender Version** Broken: 2.93.3 Worked: Never (going back to 2.8.1 at least) **Short description of error** If you are using two monitors, and you have a Properties window on one monitor and you try to use any Object Picker, the picker will not allow you to select any object that is on the other monitor. This makes a dual screen experience very frustrating, if you have the viewport on one screen and all the properties panels on the other. **Exact steps for others to reproduce the error** 1. Create an object 2. Add a "Child Of" Constraint (could be any constraint or modifier that allows you to select an object using a picker) 3. Open a new window Window > New Window, change that to a Properties Editor 3. In the Constraint's Object field click on the picker to activate it, try to pick in the other window, it wont work
Author

Added subscriber: @glencandle-3

Added subscriber: @glencandle-3
Ryan Rickett changed title from Object Picker Doesn't Work in Full Screen Mode to Object Picker Doesn't Work on Second/Other Monitor 2021-08-21 08:02:05 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, this is not working across multiple windows (does not even have to be on a different monitor).
Think this has been reported before, will try to dig that up.

Can confirm, this is not working across multiple windows (does not even have to be on a different monitor). Think this has been reported before, will try to dig that up.
Philipp Oeser changed title from Object Picker Doesn't Work on Second/Other Monitor to Object Picker Doesn't Work on Second window 2021-08-24 09:21:07 +02:00
Member

We had #58162 (Object/color picker only works within the same window) once, seems like the issue resurfaced

We had #58162 (Object/color picker only works within the same window) once, seems like the issue resurfaced
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

We also have #78833 (Eyedropper: Sampling on another window does not work on Linux), but since this report is for Windows: @mano-wii : could you check on this?

We also have #78833 (Eyedropper: Sampling on another window does not work on Linux), but since this report is for Windows: @mano-wii : could you check on this?

This issue was referenced by 583f694826

This issue was referenced by 583f6948266ba1195c40549d2c8c90f1a1c02e66

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-08-26 19:17:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90817
No description provided.