source/blender/editors/interface/interface_eyedropper.c
@@ -126,23 +126,15 @@ void eyedropper_draw_cursor_text_window(const struct wmWindow *window, const cha
 }
 
 void eyedropper_draw_cursor_text_region(const struct bContext *C,
-                                        const ARegion *region,
+                                        const int x,
+                                        const int y,
                                         const char *name)
 {
-  wmWindow *win = CTX_wm_window(C);
-  const int x = win->eventstate->x;
-  const int y = win->eventstate->y;
-
-  if ((name[0] == '\0') || (BLI_rcti_isect_pt(&region->winrct, x, y) == false)) {
+  if (name[0] == '\0') {
     return;
   }
 
-  const int mval[2] = {
-      x - region->winrct.xmin,
-      y - region->winrct.ymin,
-  };
-
-  eyedropper_draw_cursor_text_ex(mval[0], mval[1], name);
+  eyedropper_draw_cursor_text_ex(x, y, name);
 }
 
 /**
